# ghc-reproducer-25872

./: README.md  cabal.project
eras/shelley/impl/: cardano-ledger-shelley.cabal
eras/shelley/impl/src/Cardano/Ledger/Shelley/: AdaPots.hs  LedgerState.hs  Rules.hs  TxBody.hs
libs/cardano-data/: cardano-data.cabal
libs/cardano-ledger-binary/: cardano-ledger-binary.cabal
libs/cardano-ledger-core/: cardano-ledger-core.cabal
libs/cardano-ledger-core/src/Cardano/Ledger/: BaseTypes.hs  Coin.hs
libs/small-steps/src/Control/State/Transition/: Extended.hs
libs/vector-map/: vector-map.cabal
