cabal-version:      3.0
name:               cardano-data
version:            1.2.3.1
license:            Apache-2.0
maintainer:         operations@iohk.io
author:             IOHK
homepage:           https://github.com/intersectmbo/cardano-ledger
synopsis:           Specialized data for Cardano project
category:           Control
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/intersectmbo/cardano-ledger
    subdir:   libs/cardano-data

library
    exposed-modules:
        Data.MapExtras
        Data.OSet.Strict
        Data.OMap.Strict

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages

    build-depends:
        base >=4.14 && <5,
        aeson >=2.2,
        cardano-ledger-binary >=1.4,
        cardano-strict-containers >=0.1.2.1,
        containers,
        data-default-class,
        deepseq,
        nothunks,
        microlens
