cabal-version:      3.0
name:               cardano-ledger-core
version:            1.15.0.0
license:            Apache-2.0
maintainer:         operations@iohk.io
author:             IOHK
bug-reports:        https://github.com/intersectmbo/cardano-ledger/issues
synopsis:
    Core components of Cardano ledgers from the Shelley release on.

description:
    Cardano ledgers from the Shelley release onwards share a core basis rooted in
    the Shelley ledger specification. This package abstracts a number of components
    which we expect to be shared amongst all future ledgers implemented around this base.

extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/intersectmbo/cardano-ledger
    subdir:   libs/cardano-ledger-core

flag asserts
    description: Enable assertions
    default:     False

library
    exposed-modules:
        Cardano.Ledger.Address
        Cardano.Ledger.Ap
        Cardano.Ledger.AuxiliaryData
        Cardano.Ledger.BaseTypes
        Cardano.Ledger.BHeaderView
        Cardano.Ledger.Block
        Cardano.Ledger.Coin
        Cardano.Ledger.Compactible
        Cardano.Ledger.Core
        Cardano.Ledger.Credential
        Cardano.Ledger.Crypto
        Cardano.Ledger.Era
        Cardano.Ledger.Genesis
        Cardano.Ledger.Hashes
        Cardano.Ledger.HKD
        Cardano.Ledger.Keys
        Cardano.Ledger.Keys.Bootstrap
        Cardano.Ledger.Keys.WitVKey
        Cardano.Ledger.Language
        Cardano.Ledger.MemoBytes
        Cardano.Ledger.MemoBytes.Internal
        Cardano.Ledger.Metadata
        Cardano.Ledger.Orphans
        Cardano.Ledger.PoolDistr
        Cardano.Ledger.PoolParams
        Cardano.Ledger.Plutus
        Cardano.Ledger.Plutus.CostModels
        Cardano.Ledger.Plutus.Data
        Cardano.Ledger.Plutus.ExUnits
        Cardano.Ledger.Plutus.Language
        Cardano.Ledger.Plutus.TxInfo
        Cardano.Ledger.Plutus.Evaluate
        Cardano.Ledger.Plutus.ToPlutusData
        Cardano.Ledger.Rewards
        Cardano.Ledger.Rules.ValidationMode
        Cardano.Ledger.SafeHash
        Cardano.Ledger.Serialization
        Cardano.Ledger.Slot
        Cardano.Ledger.TxIn
        Cardano.Ledger.Val

    hs-source-dirs:   src
    other-modules:
        Cardano.Ledger.Core.Era
        Cardano.Ledger.Keys.Internal
        Cardano.Ledger.Core.PParams
        Cardano.Ledger.Core.Translation
        Cardano.Ledger.Core.TxCert

    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
        -Wunused-packages

    build-depends:
        base >=4.14 && <5,
        aeson >=2,
        base16-bytestring,
        base64-bytestring,
        base-deriving-via,
        binary,
        bytestring,
        cardano-ledger-binary ^>=1.4,
        cardano-crypto,
        cardano-crypto-class,
        cardano-crypto-praos,
        cardano-crypto-wrapper,
        cardano-ledger-byron,
        cardano-prelude,
        cardano-slotting,
        containers,
        data-default-class,
        deepseq,
        FailT,
        groups,
        heapwords,
        iproute,
        mtl,
        measures,
        microlens,
        network,
        nothunks >=0.1.5 && <0.3,
        partial-order,
        plutus-core,
        plutus-ledger-api,
        prettyprinter,
        random,
        quiet,
        serialise,
        scientific,
        non-integral >=1.0,
        primitive,
        small-steps >=1.1,
        cardano-strict-containers,
        text,
        time,
        transformers,
        utf8-string,
        validation-selective,

    if flag(asserts)
        ghc-options: -fno-ignore-asserts

    if !impl(ghc >=9.2)
        ghc-options: -Wno-name-shadowing
