cabal-version:      3.0
name:               vector-map
version:            1.1.0.0
license:            Apache-2.0
maintainer:         operations@iohk.io
author:             IOHK
homepage:           https://github.com/intersectmbo/cardano-ledger
synopsis:
    An efficient VMap that is backed by two vectors: one for keys and another for values.

category:           Control
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/intersectmbo/cardano-ledger
    subdir:   libs/vector-map

library
    exposed-modules:  Data.VMap
    hs-source-dirs:   src
    other-modules:    Data.VMap.KVVector
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages

    build-depends:
        base >=4.14 && <5,
        aeson,
        containers,
        deepseq,
        nothunks,
        primitive,
        vector,
        vector-algorithms

library testlib
    exposed-modules:  Test.Data.VMap.TreeDiff
    visibility:       public
    hs-source-dirs:   testlib
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
        -Wunused-packages

    build-depends:
        base,
        tree-diff,
        vector,
        vector-map
