cabal-version:      3.0
name:               cardano-ledger-shelley
version:            1.14.1.0
license:            Apache-2.0
maintainer:         operations@iohk.io
author:             IOHK
synopsis:           Shelley Ledger Executable Model
build-type:         Simple
data-files:         cddl-files/shelley.cddl
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/intersectmbo/cardano-ledger.git
    subdir:   eras/shelley/impl

flag asserts
    description: Enable assertions
    default:     False

library
    exposed-modules:
        Cardano.Ledger.Shelley.PParams
        Cardano.Ledger.Shelley.Scripts
        Cardano.Ledger.Shelley.Tx
        Cardano.Ledger.Shelley.Tx.Internal
        Cardano.Ledger.Shelley.TxAuxData
        Cardano.Ledger.Shelley.TxBody
        Cardano.Ledger.Shelley.TxCert
        Cardano.Ledger.Shelley.TxOut
        Cardano.Ledger.Shelley.TxWits

    hs-source-dirs:   src
    other-modules:
        Cardano.Ledger.Shelley.Era

    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
        -Wunused-packages

    build-depends:
        base >=4.14 && <5,
        aeson >=2,
        bytestring,
        cardano-crypto-class,
        cardano-data ^>=1.2.2,
        cardano-ledger-binary ^>=1.4,
        cardano-ledger-core ^>=1.15,
        containers,
        deepseq,
        heapwords,
        microlens,
        nothunks,
        cardano-strict-containers,

    if flag(asserts)
        ghc-options: -fno-ignore-asserts
